<resources>
    <string name="app_name">TheLocalPlates8</string>
    <string name="login_form">Login Form</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="open_map">Open map</string>
    <string name="checkout">Checkout</string>
    <string name="welcome_to_business_screen">Welcome to business screen</string>
    <string name="welcome_to_business_creation_screen">Welcome to business creation screen</string>
    <string name="please_fill_the_entire_boxes">Please fill the entire boxes</string>
    <string name="destination_limit">Destination Limit</string>
    <string name="phone_number">Phone number</string>
    <string name="create_a_new_business">Create a new business</string>
    <string name="city">City</string>
    <string name="create_business">Create business</string>
    <string name="delivery_cost">Delivery cost (New Israeli Shekels)</string>
    <string name="open_time">Open Time</string>
    <string name="closed_time">Closed time</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">email</string>
    <string name="add_product">Add product</string>
    <string name="welcome_to_add_product_screen">Welcome to add product screen</string>
    <string name="mekoshkeshet">Mekoshkeshet</string>
    <string name="kosher">Kosher</string>
    <string name="preperation_time">Preperation time</string>
    <string name="button">Button</string>
    <string name="deleteproduct">DeleteProduct</string>
    <string name="_80">80$</string>
    <string name="product_name">Product name</string>
    <string name="product_price">Product price</string>
    <string name="product_culture">Product culture</string>
    <string name="kosher_describe_the_kashrot">Kosher (Describe the kashrot)</string>
    <string name="preparation_time">Preparation Time</string>
    <string name="upload_image">Upload Image</string>
    <string name="select_image">Select Image</string>
    <string name="add_product_btn">Add product</string>
    <string name="select_image_create_business">Select image</string>
    <string name="business">Business</string>
    <string name="cart">Cart</string>
    <string name="settings">Settings</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="cartMain">Cart</string>
    <string name="settingsMain">Settings</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="price">Price</string>
    <string name="productname">ProductName</string>
    <string name="x3">x3</string>
    <string name="totalprice">TotalPrice</string>
    <string name="decrease_the_quantity_of_the_product">Decrease the quantity of the product</string>
    <string name="increase_item_quantity_by_one">Increase item quantity by one</string>
    <string name="remove_product_from_the_cart">Remove product from the cart</string>
    <string name="image_of_the_product">Image of the product</string>
    <string name="continue_to_checkout">proceed to checkout</string>
    <string name="welcome_to_cart_activity">Welcome to cart activity</string>
    <string name="quantity">Quantity</string>
    <string name="cartScreen">Cart</string>
    <string name="title">Title</string>
    <string name="culture">Culture</string>
    <string name="rating">Rating</string>
    <string name="ingredients">Ingredients</string>
    <string name="inventory_amount">Inventory Amount</string>
    <string name="available">Available</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="closeText">Close</string>
    <string name="businessText">Business</string>
    <string name="kashrot">Kashrot</string>
    <string name="badatz">Badatz</string>
    <string name="other">Other</string>
    <string name="diet">Diet</string>
    <string name="gluten_free">Gluten free:</string>
    <string name="aa">____</string>
    <string name="order_page_text">In this page you can view all your orders.\nTo view the details of specific order please\nclick on the right button.\nThere you can review and rate the product and\nthe business.</string>
</resources>