<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BusinessCreationActivity">

    <TextView
        android:textStyle="bold|italic"
        android:textColor="#E80505"
        android:textSize="20dp"
        android:id="@+id/BusinessCreationScreenTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_business_creation_screen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:textStyle="bold|italic"
        android:textColor="#E80505"
        android:textSize="15dp"
        android:id="@+id/BusinessCreationGuideTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_fill_the_entire_boxes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/BusinessCreationScreenTxt"
        app:layout_constraintStart_toStartOf="@+id/BusinessCreationScreenTxt"
        app:layout_constraintTop_toBottomOf="@+id/BusinessCreationScreenTxt"
        app:layout_constraintVertical_bias="0.031" />

    <EditText
        android:textStyle="bold|italic"
        android:id="@+id/editTextPhoneBusiness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/BusinessCreationGuideTxt"
        app:layout_constraintStart_toStartOf="@+id/BusinessCreationGuideTxt"
        app:layout_constraintTop_toBottomOf="@+id/BusinessCreationGuideTxt"
        app:layout_constraintVertical_bias="0.039"
        android:autofillHints="" />

    <EditText
        android:textStyle="bold|italic"

        android:id="@+id/editTextTextCityBusiness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/city"
        android:inputType="textPostalAddress"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editTextPhoneBusiness"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextPhoneBusiness"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhoneBusiness"
        app:layout_constraintVertical_bias="0.027"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextTextDestinationLimit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/destination_limit"
        android:inputType="textPostalAddress"
        android:minHeight="48dp"
        android:textStyle="bold|italic"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextCityBusiness"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextTextCityBusiness"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextCityBusiness"
        app:layout_constraintVertical_bias="0.043"
        android:autofillHints="" />

    <Button
        android:textStyle="bold|italic"
        android:id="@+id/createBsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_business"
        android:textColorHint="#FFFBF6"
        android:backgroundTint="#74DF143D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextDestinationLimit"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@+id/editTextTextDestinationLimit"
        app:layout_constraintTop_toBottomOf="@+id/editTextDeliveryCost"
        app:layout_constraintVertical_bias="0.9" />

    <EditText
        android:id="@+id/editTextDeliveryCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="380dp"
        android:ems="10"
        android:textStyle="bold|italic"

        android:hint="@string/delivery_cost"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextDestinationLimit"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextTextDestinationLimit"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextOpenTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/open_time"
        android:inputType="time"
        android:textStyle="bold|italic"

        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editTextDeliveryCost"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextDeliveryCost"
        app:layout_constraintTop_toBottomOf="@+id/editTextDeliveryCost"
        app:layout_constraintVertical_bias="0.059"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextClosedTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/closed_time"
        android:inputType="time"
        android:minHeight="48dp"
        android:textStyle="bold|italic"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editTextOpenTime"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextOpenTime"
        app:layout_constraintTop_toBottomOf="@+id/editTextOpenTime"
        app:layout_constraintVertical_bias="0.123"
        android:autofillHints="" />
</androidx.constraintlayout.widget.ConstraintLayout>