<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logo"
    android:backgroundTintMode="screen">

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/textView"
        style="@style/Widget.AppCompat.TextView"
        android:layout_width="358dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:scrollbarStyle="insideOverlay"
        android:shadowColor="#151414"
        android:text="@string/login_form"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="#E80505"
        android:textColorHighlight="#B10303"
        android:textColorLink="#811616"
        android:textStyle="bold|italic" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <TextView
        android:textStyle="bold|italic"
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Email:"

        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <EditText
        android:id="@+id/etLoginEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textStyle="bold"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="password:"
        android:textStyle="bold|italic"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <EditText
        android:id="@+id/etLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <Button
        android:textStyle="bold|italic"

        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColorHint="#FFFBF6"
        android:backgroundTint="#74DF143D"
        android:textColor="#FFFBF6"/>
    <TextView
        android:id="@+id/tvSwitchToRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:linksClickable="true"
        android:text="@string/register"
        android:textStyle="bold|italic"

        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#911C1C"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2" />
</LinearLayout>